# eduwrench-slurm-terminal-simulator

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSES  README.md  run_it.sh
app/: package-lock.json  package.json
app/public/: index.html
app/src/: index.js
app/src/Clock/: index.js
app/src/Header/: index.css  index.js
app/src/Terminal/: index.css  index.js
app/src/TextArea/: index.css  index.js
client/: filesystem.js  index.css  index.html  index.js  package-lock.json  package.json  server_address.js  setup.sh
narrative/: README.md
server/: CMakeLists.txt  SimulationThreadState.cpp  SimulationThreadState.h  compute_rightnow_job_sizes.cpp  package-lock.json  package.json  response.cpp  response.h  router.cpp  router.h  server.cpp  workflow_manager.cpp  workflow_manager.h
serverV2/: CMakeLists.txt  server.cpp  workflow_manager.cpp  workflow_manager.h
src/: package.json
tracefile/: sample_trace_file.swf
